# agentic-services-protocol

./: .cspell.json  .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  generate_schemas.py  main.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  schema_utils.py  validate_specs.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  domain_proposal.md  feature_request.md
.github/workflows/: docs.yml  lint.yml  validate.yml
docs/: index.md  playground.md
docs/documentation/: core-concepts.md  implementation-checklist.md  roadmap.md  schema-authoring.md
docs/examples/: discovery_profile.json
docs/specification/: catalog.md  discovery.md  domains.md  fulfillment.md  order-tracking.md  overview.md  personalization.md  reference.md  reviews.md
docs/stylesheets/: extra.css
scripts/: bundle-schemas.mjs  generate-pydantic.sh  generate-types.mjs  generate_sdk_models.sh
source/schemas/domains/food_delivery/: profile.json
source/schemas/services/: catalog.json  fulfillment.json  order_tracking.json  personalization.json  reviews.json  streaming.json
source/schemas/services/shared/: image.json  money.json
source/schemas/services/types/: fee.json  fulfillment.json  fulfillment_status.json  item_customization.json  (+13 more)
source/services/live_services/: a2a_agent_card.json  openapi.yaml
spec/schemas/: asp.json  capability.json
spec/schemas/services/: catalog.json  discovery.json  reviews.json
spec/services/live_services/: asyncapi.yaml  mcp_openrpc.json
(+18 files in other folders)
